src/test/deca/context/invalid/LE/FielsMethodSameName.deca
// Description:
//    test les methods dans le main
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    
    int size;
    int size(int x){
        return x;
    }
}
